Changed instructions in split-pea-soup.html

--- a/recipes/split-pea-soup.html
+++ b/recipes/split-pea-soup.html
@@ -23,7 +23,7 @@
         <li>Boil the peas and smash them.</li>
         <li>Cook the carrots and onions in the chicken stock.</li>
         <li>Fry the ham on a skillet.</li>
-        <li>Combine smashed peas and ham with the chicken stock mixture and simmer on low for 20mins.</li>
+        <li>Combine smashed peas and ham with all of the chicken stock mixture and simmer on low for 20mins.</li>
     </ol>
 </body>
 </html>
